--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ python:
 
 # command to install dependencies
 install:
+  - pip install -r requirements.txt
   - pip install -r tests/test_requirements.txt
 
 # command to run tests
